Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ img:hover {
   position: sticky;
   width: 90%;
   margin-left: 5%;
-  top: 120px;
+  top: 50px;
 }
 
 .sticky-box img {
